# team4_book_shop

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-nginx  deploy.py  docker-compose.yml  pyproject.toml  requirements.txt
.config/: book_shop.nginx  bookshop.conf  supervisor.conf
app/: book_detail_info-20200117.ipynb  requirements.txt
app/books/: crawler.py  models.py  urls.py
app/books/migrations/: 0001_initial.py  0002_auto_20200117_1315.py  0002_auto_20200201_1015.py  0002_auto_20200209_2036.py  0003_merge_20200209_2245.py
app/books/views/: __init__.py  create.py  detail.py  main.py  request.py
app/config/: settings.py  urls.py
app/config/settings/: __init__.py  base.py  dev.py  prod.py
app/members/: forms.py  models.py  urls.py  views.py
app/members/migrations/: 0001_initial.py  0002_user_ban_date.py  0003_remove_user_rate_date.py
app/rental/: admin.py  models.py  urls.py  views.py
app/rental/migrations/: 0001_initial.py  0002_auto_20200117_1330.py
app/reservation/: admin.py  models.py  urls.py  views.py
app/reservation/migrations/: 0001_initial.py  0002_auto_20200117_1330.py  0002_auto_20200214_1550.py
app/templates/: .book_detail_info.html.swp  base.html  book_detail_info.html  request.html  request_success.html  reservation_failed.html
app/templates/books/: main.html  request_list.html
app/templates/members/: login.html  signup.html
